--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "sdk-commands deploy",
     "build": "sdk-commands build",
     "upgrade-sdk": "npm install --save-dev @dcl/sdk@latest",
-    "upgrade-sdk:next": "npm install --save-dev @dcl/sdk@next"
+    "upgrade-sdk:next": "npm install --save-dev @dcl/sdk@next",
+    "watch": "sdk-commands start"
   },
   "devDependencies": {
     "@dcl/asset-packs": "latest",
