--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "singleQuote": true,
     "printWidth": 120,
     "trailingComma": "none"
+  },
+  "dependencies": {
+    "dcl-npc-toolkit": "^1.1.4"
   }
 }
