--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "@dcl/asset-packs": "latest",
-    "@dcl/js-runtime": "7.3.34",
-    "@dcl/sdk": "^7.3.34"
+    "@dcl/js-runtime": "7.3.35",
+    "@dcl/sdk": "^7.3.35"
   },
   "engines": {
     "node": ">=16.0.0",
@@ -28,9 +28,13 @@
   "dependencies": {
     "@dcl-sdk/utils": "^1.1.3",
     "dcl-npc-toolkit": "^1.1.4",
-    "dcl-ui-toolkit": "^0.9.1"
+    "dcl-ui-toolkit": "^0.9.1",
+    "vlm-dcl": "^1.0.0-alpha.17"
   },
   "bundledDependencies": [
+    "dcl-ui-toolkit"
+  ],
+  "bundleDependencies": [
     "dcl-ui-toolkit"
   ]
 }
